--- a/final_server/webapp/css/main.css
+++ b/final_server/webapp/css/main.css
@@ -97,3 +97,11 @@ li {
     display: none;
     opacity: 0;
 }
+
+#graph-container {
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
