--- a/final_server/webapp/partials/oriSearch.html
+++ b/final_server/webapp/partials/oriSearch.html
@@ -13,18 +13,19 @@
 			    </label>
  			<button type="submit" class="btn btn-primary btn-lg btn-block">Search</button>
 			
-             <ul class="list-group">
-                <li ng-repeat="result in searchResult" class="list-group-item">
-                    <span> Title : {{result.title}} </span><br/>
-                    <span> Tags: {{result.tags}}
-                    <p>Snippet: {{result.snippet}}</p>
-                </li>
-            </ul>
-
-
+             
                         </div>
                     </div>
                 </div>
             </form>
+	    <ul class="list-group">
+                <li ng-repeat="result in searchResult" class="list-group-item">
+                    <span> Title : {{result.title}} </span><br/>
+                    <span> Tags: {{result.tags}}
+                    <p>Snippet: {{result.snippet | safe}}</p>
+                </li>
+            </ul>
+
+
         </div>
     </div>
