--- a/final_server/webapp/partials/oriSearch.html
+++ b/final_server/webapp/partials/oriSearch.html
@@ -22,7 +22,7 @@
                 <li ng-repeat="result in searchResult" class="list-group-item">
                     <span> Title : {{result.title}} </span><br/>
                     <span> Tags: {{result.tags}}
-                    <p>Snippet: {{result.snippet | safe}}</p>
+                    <p>Snippet: {{result.snippet}}</p>
                 </li>
             </ul>
 
