Add few features

--- a/final_server/webapp/partials/tagSearch.html
+++ b/final_server/webapp/partials/tagSearch.html
@@ -1,9 +1,10 @@
 <div class="container-fluid" flow-init ng-controller='uploadCtrl'>
         <div id="titleDiv" class="row text-center">
-            <h1>Tag Search</h1>
+            <h1>Tag suggestion</h1>
         </div>
         <div id="textDiv" class="row">
-            <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center">       
+            <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center">    
+            Upload a file:   
                 <div class="input-group">
                     <input type="file" style="display: inline" file-model="myFile"/>
                     <button type="button" class="btn btn-primary" ng-click="uploadFile()">Upload</button><br/>
