--- a/final_server/webapp/partials/tagSearch.html
+++ b/final_server/webapp/partials/tagSearch.html
@@ -14,6 +14,8 @@
                     Drag And Drop your file here
                 </div>
                 
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center">    
                 <table class="table table-striped">        
                     <tr>
                         <td>upload_file_name: </td>
@@ -23,13 +25,15 @@
                         <td>classify_tag: </td>
                         <td>{{data.classify_tags}}</td>
                     </tr>
-  		<!--   
+			
                     <tr>
-                        <td>original_tags:</td>
-                        <td>{{data.origianl_tags}}</td>
+                        <td>Frequent Words:</td>
+                        <td><div ng-repeat="ele in data.word_feature">{{ele}}</div></td>
                     </tr>
-		-->
+		    <tr>
+			<td>Snippet:</td>
+			<td>{{data.file_content}}</td>
                 </table>
-            </div>
+	    </div>
         </div>
 </div>
